Fixed food item list not showing up on search new page. Fixed some broken functionalities

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,7 +4,7 @@ html {
   letter-spacing: 0.2em; }
 
 #app-content {
-  background-color: #e8e0b7;
+  background-color: #E8E0B7;
   margin-top: 50px;
   min-height: 100vh; }
 
@@ -16,7 +16,7 @@ a:hover {
 
 /* highlight item */
 .highlight-item {
-  background-color: #e7ea25;
+  background-color: #E7EA25;
   font-weight: bold; }
 
 li {
@@ -153,7 +153,7 @@ input {
   background-color: #006953; }
 
 footer {
-  background-color: #6b4258;
+  background-color: #6B4258;
   padding-top: 15px;
   height: 60px;
   text-align: center; }
@@ -206,7 +206,7 @@ footer {
     color: white; }
 
 .disabled {
-  background-color: #9e1754;
+  background-color: #9E1754;
   pointer-events: none; }
 
 /* panel delete category button */
@@ -260,7 +260,7 @@ footer {
     -moz-border-radius: 0 !important;
     -ms-border-radius: 0 !important;
     border-radius: 0 !important;
-    background-color: #6b4258; }
+    background-color: #6B4258; }
   .panel-app .panel-body, .foods-panel .panel-body {
     height: 332px; }
   .panel-app .panel-title, .foods-panel .panel-title {
@@ -298,7 +298,7 @@ footer {
       padding: 10px 15px;
       height: 44px; }
     .recipe-table-container .table tbody tr {
-      background-color: #6b4258;
+      background-color: #6B4258;
       color: white;
       opacity: 0.9; }
       .recipe-table-container .table tbody tr:hover {
@@ -333,7 +333,7 @@ footer {
   -ms-box-shadow: 0px 2px 11px 2px rgba(209, 209, 209, 0.49);
   box-shadow: 0px 2px 11px 2px rgba(209, 209, 209, 0.49);
   padding: 20px;
-  background-color: #ecf9d4;
+  background-color: #ECF9D4;
   max-height: 458px;
   position: relative;
   color: #333; }
@@ -483,21 +483,21 @@ footer {
   overflow-y: auto;
   max-height: 292px;
   margin-top: 15px; }
-  .food-table-container .table thead tr {
-    background-color: #6b4258;
+  .food-table-container.table thead tr {
+    background-color: #6B4258;
     opacity: 0.9;
     color: white;
     font-size: 16px;
     cursor: pointer;
     height: 43px; }
-    .food-table-container .table thead tr:hover {
+    .food-table-container.table thead tr:hover {
       opacity: 1; }
-    .food-table-container .table thead tr th {
+    .food-table-container.table thead tr th {
       padding: 10px 15px;
       font-size: 16px; }
-  .food-table-container .table tbody {
+  .food-table-container.table tbody {
     border-collapse: separate; }
-    .food-table-container .table tbody tr {
+    .food-table-container.table tbody tr {
       display: none; }
 
 .food-item {
@@ -610,3 +610,5 @@ footer {
   margin: 15px 0px 0px 0px; }
   .add-food-input .form-control {
     height: 42px; }
+
+/*# sourceMappingURL=main.css.map */
