--- a/app/assets/stylesheets/pages/_search_new_page.scss
+++ b/app/assets/stylesheets/pages/_search_new_page.scss
@@ -26,8 +26,7 @@
   max-height: 292px;
   margin-top: 15px;
 
-	.table {
-
+	&.table {
 		thead tr {
 			background-color: $panel-heading-background;
 			opacity: 0.9;
